Fixed link and icons.

--- a/404.md
+++ b/404.md
@@ -8,7 +8,7 @@ permalink: /404.html
 
 This is not the web page you were looking for.  No sense sticking around for a very long time.  Check out these links to perhaps more exciting content.
 
-* [Journal](/)
+* [Journal](/journal/)
 * [Archives](/archives/)
 * [About](/about/)
 
