Fixed links within site.

--- a/_posts/2012-02-20-uino-32u4-uino-1284p-alive.md
+++ b/_posts/2012-02-20-uino-32u4-uino-1284p-alive.md
@@ -19,7 +19,7 @@ assets: resources/2012-02-20-uino-32u4-uino-1284p-alive
 
 {% include lightbox.html image="uino-1284p_v0.3_assembled_b.jpg" thumb="uino-1284p_v0.3_assembled_b-150x150.jpg" caption="The *uino-1284p assembled"  float="left" %}
 
-Over the past few days I assembled one each of the [*uino-1284p](uino-1284p-arrived) and [*uino-32u4](uino-32u4-arrived). Things went very well and few issues were encountered.
+Over the past few days I assembled one each of the [\*uino-1284p]({% post_url 2012-01-18-uino-1284p-arrived %}) and [\*uino-32u4]({% post_url 2012-01-14-uino-32u4-arrived %}). Things went very well and few issues were encountered.
 
 The *uino-32u4 went together flawless. For initial testing I used the Arduino Leonardo bootloader and core files. Since my pinout differs from the Arduino Leonardo this required some translating of digital pins to get the lights to blink. But blink they do. I am so glad to see this actually working. Loading the Leonardo bootloader onto the board using the Arduino 1.0 IDE was trivial and worked without a flaw.
 
